Fixs home logo on small screens

--- a/src/Biopen/CoreBundle/Resources/scss/home.scss
+++ b/src/Biopen/CoreBundle/Resources/scss/home.scss
@@ -371,12 +371,6 @@ body
     		font-size: 1rem;
     	}
 
-    	#home-logo
-    	{
-    		width: auto;
-      	max-height: 130px;
-    	}
-
     	#search-bar-container
     	{
     		margin-top: 1rem;
